Fix middle alignment modifier for media object
Middle alignment modifier won't work in it's current state. Float needs to be removed and the media image also isn't set as table cell with middle align. Margin spacing will also fail once display is set to table cell.

--- a/src/sass/objects/_objects.media.scss
+++ b/src/sass/objects/_objects.media.scss
@@ -38,8 +38,21 @@ $spacing-media: 1em;
 .media--middle-align {
     display: table;
 
-    > .media__body {
+    > .media__body,
+    > .media__image {
+        float: none;
         display: table-cell;
         vertical-align: middle;
     }
+    
+    > .media__image {
+        padding-right: $spacing-media;
+    }    
+}
+
+.media--middle-align.media--rev {
+    > .media__image {
+        padding-right: 0;
+        padding-left: $spacing-media;
+    }    
 }
